overflow fixed

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ i:hover{
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center center;
-        height: 20em;
+        height: 22em;
     }
     .details{
         display: flex;
